@startuml

Alumno --> Materia
Inscripcion --> Alumno
Inscripcion --> Materia
Materia -> Materia

class Materia{
    - String nombre
    -List<Materia> correlativas

    +agregarCorrelativas(Materia... materias)
    +List<Materia> getCorrelativas()
}

class Inscripcion{
    -Alumno alumno
    -List<Materia> materias

    +agregarMaterias(Materia... materias)
    +aprobada()
}

class Alumno{
    -String nombre
    -List<Materia> materiasAprobadas

    +List<Materia> getMateriasAprobadas()
    +aprobo(Materia materia)
    +agregarMateriasAprobadas(Materia... materias)
}
@enduml

Alumno 1 — * Materia (aprobadas)

Materia 0..* — * Materia (correlativas)

Inscripcion 1 — * Materia (materias a inscribirse)

Inscripcion 1 — 1 Alumno (alumno que se inscribe)